--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile ~/.gitignore_global
 
-# Ignore bundler config
-/.bundle
+
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
+/db/development.sqlite3
 
 # Ignore all logfiles and tempfiles.
-/log/*.log
+/*.log
 /tmp
+/db/schema.rb
+public/.DS_Store
+public/images/.DS_Store
